# htmxeample

./: Cargo.toml
src/: main.rs  templates.rs
src/db/: mod.rs  queries.rs
src/routes/: test.rs  user.rs
static/: styles.css
templates/: Hello.html  _layout.html  index.html  profile.html
