[package]
name = "htmxTest"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-web = "4"
env_logger = "0.10"
log = "0.4"
askama = "0.13"
askama_web = { version = "0.13", features = ["actix-web-4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
